@@ -2,6 +2,9 @@
 * colours_pal.c: More accurate emulation of PAL colours based on analysis of
   oscillograms of PAL GTIA output.
 
+* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
+  for the cartridge mapping used by "Turbo Hit"/"Atari Blizzard Hit".
+
 
 2013-03-21  Petr Stehlik <pstehlik@sophics.cz>
 * configure.c, ui.c, atari_rpi.c, gles/video.c: committing new support
